@@ -174,6 +174,9 @@ NEW FEATURES
     o	The plot method for stl() now allows the colour of the range
 	bars to be set (default unchanged at "light gray").
 
+    o	Exact p-values are available for the two-sided one-sample
+	Kolmogorov-Smirnov test.
+
 
 DEPRECATED & DEFUNCT
 
